Agregado api/canciones

--- a/src/views/artistas.ejs
+++ b/src/views/artistas.ejs
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lista de Artistas</title>
     <style>
+      h1 {
+        text-align: center;
+      }
       body {
         font-family: Arial, sans-serif;
         margin: 0;
