--- a/src/views/generos.ejs
+++ b/src/views/generos.ejs
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lista de Géneros y Canciones</title>
     <style>
+      h1 {
+        text-align: center;
+      }
       body {
         font-family: Arial, sans-serif;
         margin: 0;
@@ -38,6 +41,7 @@
     </style>
   </head>
   <body>
+    <h1>Lista de Géneros y Canciones</h1>
     <% generos.forEach((genero) => { %>
     <section>
       <p><strong>Nombre del género:</strong> <%= genero.nombre %></p>
