Fixeo index.ejs

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -80,7 +80,7 @@
         <tr>
           <td><strong>/api/canciones</strong></td>
           <td>Devuelve la información de todas las canciones resgitradas en nuestra plataforma, tomando en cuenta las asociaciones de estas con el genero y el tipo de medio utilizado.</td>
-          <td><a href="/api/canciones">GET</a></td>
+          <td><a href="/api/canciones">Canciones</a></td>
         </tr>
         <tr>
           <td><strong>/artistas/create</strong></td>
