--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -85,17 +85,17 @@
         <tr>
           <td><strong>/artistas/create</strong></td>
           <td>Puedes agregar un nuevo artista a nuestra base de datos. Para porder utilizar esta API, debes ejecutar la ruta <strong> /artistas/create/id </strong> desde la plataforma <a target="_blank" href="https://www.postman.com/">POSTMAN</a> </td>
-          <td><a href="https://www.postman.com/" target="_blank">POST</a></td>
+          <td><a href="https://www.postman.com/" target="_blank">Crear artista</a></td>
         </tr>
         <tr>
           <td><strong>/artistas/update/id</strong></td>
           <td>Puedes modifcar el nombre del artista en nuestra base de datos. Para porder utilizar esta API, debes ejecutar la ruta <strong> /artistas/update/id </strong> desde la plataforma <a target="_blank" href="https://www.postman.com/">POSTMAN</a></td>
-          <td><a href="https://www.postman.com/" target="_blank">PUT</a></td>
+          <td><a href="https://www.postman.com/" target="_blank">Editar artista</a></td>
         </tr>
         <tr>
           <td><strong>/artistas/delete/id</strong></td>
           <td>Puedes eliminar un artista a nuestra base de datos. Para porder utilizar esta API, debes ejecutar la ruta <strong> /artistas/delete/id </strong> desde la plataforma <a target="_blank" href="https://www.postman.com/">POSTMAN</a></td>
-          <td><a href="https://www.postman.com/" target="_blank">DELETE</a></td>
+          <td><a href="https://www.postman.com/" target="_blank">Eliminar artista</a></td>
         </tr>
 
       </tbody>
